<resources>
    <string name="app_name">Timesheet management</string>
    <string name="message_write_error">Error Writing Message ! \n</string>
    <string name="message_write_success">Successfully written to Tag !</string>
    <string name="message_unknown_issue">Unknown issue</string>
    <string name="message_write_progress">Writing to Tag..</string>
    <string name="message_tag_detected">NFC Tag Detected !</string>
    <string name="message_read_tag">Check current NFC Tag</string>
    <string name="message_write_tag">Register an NFC Tag</string>
    <string name="message_tap_tag">Tap the NFC Tag to your device !</string>
    <string name="hint_message">Employee\'s full name</string>
    <string name="hint_email">Employee\'s email</string>
    <string name="empty_tag">Tag is empty or not supported</string>
    <string name="write_tag_unable">Tag is not Writable</string>
    <string name="rewrite_tag">Rewriting tag. Older name was</string>
    <string name="manager_tag">staff smart easy</string>
    <string name="cannot_find">Cannot find employee</string>
    <string name="removed">Employee is removed from database but tag still has information</string>
    <string name="removed_unsuccess">Unable to remove employee from database</string>

    <string name="signed_in">Signed in!</string>

    <string name="sign_out">Sign Out</string>
    <string name="image_button_label">Take a photo</string>

    <string name="email_address">sedghi.h@gmail.com</string>
    <string name="email_pass">*****</string>
    <string name="email_title">Employee tag registration</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

    //// launcher activity
    <string name="message_management_tag">manage tags</string>
    <string name="message_timesheet_tag">timesheets</string>
    <string name="message_report_tag">Create report</string>
    <string name="title_activity_tag_reader">TagReaderActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="select_month">Select A Month</string>


    ////// Analytics
    <string name="analytics_loggedin_label">User is signed in</string>
    <string name="analytics_loggedin_event">logging in</string>
    <string name="analytics_read_tag_event">reading tags</string>
    <string name="analytics_write_tag_event">writing tags</string>
    <string name="analytics_snack_message_event">snack message</string>
    <string name="analytics_selected_dates_event">selected dates</string>
    <string name="analytics_parse_info_event">parse info</string>
    <string name="analytics_upload_image_event">upload image</string>
    <string name="analytics_upload_image_label">image uploaded</string>
    <string name="analytics_upload_new_staff_event">upload staff</string>
    <string name="analytics_in_out_event">in out</string>
    <string name="analytics_midnight_cleanup_event">midnight cleanup</string>
    <string name="analytics_html_report_event">html report</string>


    //// html report
    <string name="template1"><![CDATA[<!DOCTYPE html>
    <html>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <head>
    <style>
    table {
      font-family: arial, sans-serif;
      border-collapse: collapse;
      width: 95%;
    }

    td, th {
      border: 1px solid #dddddd;
      text-align: center;
      padding: 9px;
    }

table.center {
  margin-left:auto;
  margin-right:auto;
}

caption {
  background-color: #0c521c;
  color: #fdfefb;
  padding: 4px;
  font-weight: bold;
}

headings {
  color: #0c521c;
  text-align: center;
  font-weight: bold;
}

    tr:nth-child(even) {
      background-color: #eee;
    }
    tr:hover {background-color: #ccc;}

    .button {
  background-color: #455731;
  border: none;
  color: #defa93;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  width: 50%;
  gravity: center
  margin: 4px 2px;
  cursor: pointer;
    }
    </style>
    </head>
    <body>

<table class="center">
    <headings><h2>Report <br>From $start to $end<br>$business</h2></headings>
    <br>
 </table>]]>

</string>

    <string name="template2"><![CDATA[<table class="center">
    <caption>$name</caption>

    <tr>
        <th>Time in</th>
        <th>Time out</th>
        <th>Sum</th>
    </tr>

    ]]>
</string>

    <string name="template3"><![CDATA[
    <tr>
        <td>$timeIn</td>
        <td>$timeOut</td>
        <td>$Sum</td>
    </tr>

    ]]>
</string>

    <string name="template4"><![CDATA[
    </table>
    <p><b> - Total: $totalHours</b> </p>
    <br>
    <br>

    ]]>
</string>

    <string name="template5"><![CDATA[

    <button class="button" onclick="window.print()">Print or save PDF</button>

    </body>
    </html>
    ]]>
</string>
    <string name="write_tag_error">An Error has Occurred, tag in null. Please Try Again</string>
    <string name="format_tag_issue">Tag is not formatable</string>

</resources>
